<resources>
    <string name="app_name">对对机</string>
    <string name="empty_tips">空空如也╮(╯▽╰)╭</string>
    <string name="error_tips">加载失败╮(╯▽╰)╭</string>
    <string name="error_refresh">点击重试</string>
    <string name="loading_tips">正在加载...</string>
    <string name="txt_show_data">显示数据页面</string>
    <string name="txt_show_empty">显示数据为空页面</string>
    <string name="txt_show_error">显示加载错误页面</string>
    <string name="txt_show_loading">显示正在加载页面</string>
    <string name="this_moment_you_yhing">这一刻你的想法...</string>
    <string name="Search">搜索</string>
    <string name="No_friends">没有好友</string>
    <string name="new_friends">新朋友</string>
    <string name="group">群组</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">发起群聊</string>
    <string name="add_contacts">添加好友</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="location_sharing_ended">位置共享已结束</string>
    <string name="you_are_sharing_location">你正在共享位置</string>
    <string name="person_is_sharing_loaction">人正在共享位置</string>
    <string name="persons_are_sharing_loaction">人正在共享位置</string>
    <string name="fetching">获取中……</string>
    <string name="location_sharing_exit_promt">退出当前页面将会终止实时位置共享,确定退出？</string>
    <string name="main_name">融云</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="geographical_position">地理位置</string>
    <string name="Pass_Note">传纸条</string>
    <string name="txt_experss">表情</string>
    <string name="txt_food">美食</string>
    <string name="txt_bubble">气泡</string>
    <string name="txt_lace">花边</string>
    <string name="txt_postmark">邮戳</string>
    <string name="txt_explore">探究</string>
    <string name="txt_send">发送</string>
    <string name="boast_game">吹牛</string>
    <string name="twenty_one">21点</string>
    <string name="roll_the_dice_title">重摇需要30金币</string>
    <string name="again_roll">重摇</string>
    <string name="confirm">确定</string>
</resources>
